Fixes to navbar link positioning on mobile devices

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -42,8 +42,8 @@
     }
 
     .content {
-        margin: 60px 12px 0 0;
-        scroll-margin-top: 60px;
+        margin: 84px 12px 0 0;
+        scroll-margin-top: 84px;
         scroll-margin-left: 0;
         width: calc(100% - 24px);
         top: 0;
@@ -52,7 +52,7 @@
     }
 
     #portfolio {
-        height: calc(100% - 60px);
+        height: calc(100% - 84px);
         top: 0;
         -webkit-transform: translate(-50%, 0);
         transform: translate(-50%, 0);
@@ -61,10 +61,8 @@
     .navbar {
         height: 60px;
         width: 100%;
-        margin-right: 0;
-        margin-bottom: 32px;
-        display: inline-flex;
-        flex-direction: row;
+        margin: 0;
+        display: inline-block;
     }
 
     .nav-placeholder {
@@ -73,11 +71,9 @@
     }
 
     .nav-buttons {
-        width: 85%;
         height: 100%;
-        text-align: center;
-        margin: 0;
         padding: 0 0 0 16px;
+        float: left;
     }
 
     .nav-item, .active-item {
@@ -100,13 +96,14 @@
     }
 
     .links {
-        width: 15%;
+        width: auto;
         height: 100%;
-        display: inline-flex;
+        padding-right: 8px;
     }
 
     .link-item {
         height: 100%;
+        float: right;
     }
 
     .link-item a {
